-
Bug
-
Resolution: Done
-
P2: Important
-
5.10.0 Beta 2
-
OS X 10.11 (Xcode 8.2.1)
Steps to reproduce:
- Download and install the Qt 5.10.0 beta2 package (clang binary)
- Launch Qt CreatorÂ
- Select 'map viewer' example from the Welcome screen
- Compile and run the example
- Close the example
Expected result:
The example closes without errors
Actual result:
The example crashes with:
Process: qml_location_mapviewer [61579] Path: /Users/USER/*/qml_location_mapviewer.app/Contents/MacOS/qml_location_mapviewer Identifier: yuytrdesw.qml-location-mapviewer Version: 0 Code Type: X86-64 (Native) Parent Process: ??? [1] Responsible: qml_location_mapviewer [61579] User ID: 501 Date/Time: 2017-10-25 09:02:52.286 +0300 OS Version: Mac OS X 10.11.6 (15G1611) Report Version: 11 Anonymous UUID: 948EF00D-E10E-4B6F-A7AF-6F00D8002893 Time Awake Since Boot: 3500000 seconds System Integrity Protection: enabled Crashed Thread: 0 Dispatch queue: com.apple.main-thread Exception Type: EXC_BAD_ACCESS (SIGSEGV) Exception Codes: KERN_INVALID_ADDRESS at 0x0000000000000018 Exception Note: EXC_CORPSE_NOTIFY VM Regions Near 0x18: --> __TEXT 0000000101b76000-0000000101b99000 [ 140K] r-x/rwx SM=COW /Users/USER/*/qml_location_mapviewer.app/Contents/MacOS/qml_location_mapviewer Application Specific Information: objc_msgSend() selector name: platformWindow Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 libobjc.A.dylib 0x00007fff8de3d4dd objc_msgSend + 29 1 com.apple.AppKit 0x00007fff8cd8aa38 -[NSApplication sendEvent:] + 2540 2 libqcocoa.dylib 0x0000000105545459 -[QNSApplication sendEvent:] + 89 3 com.apple.AppKit 0x00007fff8cbf1df2 -[NSApplication run] + 796 4 libqcocoa.dylib 0x0000000105541cad QCocoaEventDispatcher::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 2397 5 org.qt-project.QtCore 0x0000000101f5f522 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 418 6 org.qt-project.QtCore 0x0000000101f640b2 QCoreApplication::exec() + 402 7 yuytrdesw.qml-location-mapviewer 0x0000000101b7b718 main + 3736 (main.cpp:133) 8 libdyld.dylib 0x00007fff99fc05ad start + 1 Thread 1: 0 libsystem_kernel.dylib 0x00007fff8c9f65e2 __workq_kernreturn + 10 1 libsystem_pthread.dylib 0x00007fff8c156578 _pthread_wqthread + 1283 2 libsystem_pthread.dylib 0x00007fff8c154341 start_wqthread + 13 Thread 2:: Dispatch queue: com.apple.libdispatch-manager 0 libsystem_kernel.dylib 0x00007fff8c9f6efa kevent_qos + 10 1 libdispatch.dylib 0x00007fff891bb165 _dispatch_mgr_invoke + 216 2 libdispatch.dylib 0x00007fff891badcd _dispatch_mgr_thread + 52 Thread 3: 0 libsystem_kernel.dylib 0x00007fff8c9f65e2 __workq_kernreturn + 10 1 libsystem_pthread.dylib 0x00007fff8c156578 _pthread_wqthread + 1283 2 libsystem_pthread.dylib 0x00007fff8c154341 start_wqthread + 13 Thread 4: 0 libsystem_kernel.dylib 0x00007fff8c9f65e2 __workq_kernreturn + 10 1 libsystem_pthread.dylib 0x00007fff8c156578 _pthread_wqthread + 1283 2 libsystem_pthread.dylib 0x00007fff8c154341 start_wqthread + 13 Thread 5: 0 libsystem_kernel.dylib 0x00007fff8c9f65e2 __workq_kernreturn + 10 1 libsystem_pthread.dylib 0x00007fff8c156578 _pthread_wqthread + 1283 2 libsystem_pthread.dylib 0x00007fff8c154341 start_wqthread + 13 Thread 6:: QQmlThread 0 libsystem_kernel.dylib 0x00007fff8c9f72a2 poll + 10 1 org.qt-project.QtCore 0x0000000101fb7920 qt_safe_poll(pollfd*, unsigned int, timespec const*) + 544 2 org.qt-project.QtCore 0x0000000101fb8fa9 QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 857 3 org.qt-project.QtCore 0x0000000101f5f522 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 418 4 org.qt-project.QtCore 0x0000000101d9da61 QThread::exec() + 113 5 org.qt-project.QtQml 0x00000001029343d9 QQmlThreadPrivate::run() + 57 6 org.qt-project.QtCore 0x0000000101da1a55 QThreadPrivate::start(void*) + 373 7 libsystem_pthread.dylib 0x00007fff8c15699d _pthread_body + 131 8 libsystem_pthread.dylib 0x00007fff8c15691a _pthread_start + 168 9 libsystem_pthread.dylib 0x00007fff8c154351 thread_start + 13 Thread 7:: Qt bearer thread 0 libsystem_kernel.dylib 0x00007fff8c9f72a2 poll + 10 1 org.qt-project.QtCore 0x0000000101fb7770 qt_safe_poll(pollfd*, unsigned int, timespec const*) + 112 2 org.qt-project.QtCore 0x0000000101fb8fa9 QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 857 3 org.qt-project.QtCore 0x0000000101f5f522 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 418 4 org.qt-project.QtCore 0x0000000101d9da61 QThread::exec() + 113 5 org.qt-project.QtCore 0x0000000101da1a55 QThreadPrivate::start(void*) + 373 6 libsystem_pthread.dylib 0x00007fff8c15699d _pthread_body + 131 7 libsystem_pthread.dylib 0x00007fff8c15691a _pthread_start + 168 8 libsystem_pthread.dylib 0x00007fff8c154351 thread_start + 13 Thread 8:: QScanThread 0 libsystem_kernel.dylib 0x00007fff8c9effae semaphore_wait_trap + 10 1 libdispatch.dylib 0x00007fff891c0cb2 _dispatch_semaphore_wait_slow + 224 2 com.apple.framework.CoreWLAN 0x00007fff91f7101b -[CWInterface(Private) scanForNetworksWithChannels:ssidList:legacyScanSSID:includeHiddenNetworks:mergedScanResults:maxAge:maxMissCount:maxWakeCount:maxAutoJoinCount:waitForWiFi:waitForBluetooth:priority:error:] + 635 3 com.apple.framework.CoreWLAN 0x00007fff91f6b887 -[CWInterface scanForNetworksWithName:error:] + 109 4 libqcorewlanbearer.dylib 0x000000010b37c9ca QScanThread::run() + 234 5 org.qt-project.QtCore 0x0000000101da1a55 QThreadPrivate::start(void*) + 373 6 libsystem_pthread.dylib 0x00007fff8c15699d _pthread_body + 131 7 libsystem_pthread.dylib 0x00007fff8c15691a _pthread_start + 168 8 libsystem_pthread.dylib 0x00007fff8c154351 thread_start + 13 Thread 9:: QNetworkAccessManager thread 0 libsystem_kernel.dylib 0x00007fff8c9f72a2 poll + 10 1 org.qt-project.QtCore 0x0000000101fb7770 qt_safe_poll(pollfd*, unsigned int, timespec const*) + 112 2 org.qt-project.QtCore 0x0000000101fb8fa9 QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 857 3 org.qt-project.QtCore 0x0000000101f5f522 QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 418 4 org.qt-project.QtCore 0x0000000101d9da61 QThread::exec() + 113 5 org.qt-project.QtCore 0x0000000101da1a55 QThreadPrivate::start(void*) + 373 6 libsystem_pthread.dylib 0x00007fff8c15699d _pthread_body + 131 7 libsystem_pthread.dylib 0x00007fff8c15691a _pthread_start + 168 8 libsystem_pthread.dylib 0x00007fff8c154351 thread_start + 13 Thread 10:: Thread (pooled) 0 libsystem_kernel.dylib 0x00007fff8c9f5db6 __psynch_cvwait + 10 1 libsystem_pthread.dylib 0x00007fff8c157728 _pthread_cond_wait + 767 2 org.qt-project.QtCore 0x0000000101da32d0 QWaitConditionPrivate::wait_relative(unsigned long) + 288 3 org.qt-project.QtCore 0x0000000101da301b QWaitConditionPrivate::wait(unsigned long) + 43 4 org.qt-project.QtCore 0x0000000101da2fd2 QWaitCondition::wait(QMutex*, unsigned long) + 162 5 org.qt-project.QtCore 0x0000000101d9e8fa QThreadPoolThread::run() + 426 6 org.qt-project.QtCore 0x0000000101da1a55 QThreadPrivate::start(void*) + 373 7 libsystem_pthread.dylib 0x00007fff8c15699d _pthread_body + 131 8 libsystem_pthread.dylib 0x00007fff8c15691a _pthread_start + 168 9 libsystem_pthread.dylib 0x00007fff8c154351 thread_start + 13 Thread 11:: QSGRenderThread 0 libsystem_kernel.dylib 0x00007fff8c9f5db6 __psynch_cvwait + 10 1 libsystem_pthread.dylib 0x00007fff8c157728 _pthread_cond_wait + 767 2 org.qt-project.QtCore 0x0000000101da303b QWaitConditionPrivate::wait(unsigned long) + 75 3 org.qt-project.QtCore 0x0000000101da2fd2 QWaitCondition::wait(QMutex*, unsigned long) + 162 4 org.qt-project.QtQuick 0x00000001023c236d QSGRenderThread::processEventsAndWaitForMore() + 397 5 org.qt-project.QtQuick 0x00000001023c284d QSGRenderThread::run() + 861 6 org.qt-project.QtCore 0x0000000101da1a55 QThreadPrivate::start(void*) + 373 7 libsystem_pthread.dylib 0x00007fff8c15699d _pthread_body + 131 8 libsystem_pthread.dylib 0x00007fff8c15691a _pthread_start + 168 9 libsystem_pthread.dylib 0x00007fff8c154351 thread_start + 13 Thread 12:: com.apple.NSEventThread 0 libsystem_kernel.dylib 0x00007fff8c9eff72 mach_msg_trap + 10 1 libsystem_kernel.dylib 0x00007fff8c9ef3b3 mach_msg + 55 2 com.apple.CoreFoundation 0x00007fff986a9114 __CFRunLoopServiceMachPort + 212 3 com.apple.CoreFoundation 0x00007fff986a85dc __CFRunLoopRun + 1356 4 com.apple.CoreFoundation 0x00007fff986a7e28 CFRunLoopRunSpecific + 296 5 com.apple.AppKit 0x00007fff8cd53d95 _NSEventThread + 149 6 libsystem_pthread.dylib 0x00007fff8c15699d _pthread_body + 131 7 libsystem_pthread.dylib 0x00007fff8c15691a _pthread_start + 168 8 libsystem_pthread.dylib 0x00007fff8c154351 thread_start + 13 Thread 0 crashed with X86 Thread State (64-bit): rax: 0x00007fff756f8420 rbx: 0x00007fff8de3d4c0 rcx: 0x00000000001f8100 rdx: 0x00000000000a3970 rdi: 0x00007fe4036b1630 rsi: 0x00000001056367db rbp: 0x00007fff5e089200 rsp: 0x00007fff5e089138 r8: 0x0000000000000006 r9: 0x00007fe4035b4e90 r10: 0x00000001056367db r11: 0x0000000000000000 r12: 0x00007fff8d5f0bf6 r13: 0x00007fe4036b1630 r14: 0x00007fe405a47810 r15: 0x00000001056367db rip: 0x00007fff8de3d4dd rfl: 0x0000000000010246 cr2: 0x0000000000000018
The complete crash log in the attachments.